--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Go Ethereum</title>
+    <title>Goじゃぱりえんだよー</title>
     <link rel="icon" type="image/png" href="./static/images/favicon.png" />
 
     <link href="./static/styles/bootstrap.min.css" rel="stylesheet" />
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Go Ethereum</a>
+          <a class="navbar-brand" href="#">Go Japariyen</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -48,11 +48,11 @@
 
     <div class="jumbotron">
       <div class="container mascot">
-        <h1>Go Ethereum</h1>
-        <h2>Official Go implementation of the Ethereum protocol</h2>
+        <h1>Go Japariyen</h1>
+        <h2>じゃぱりえん公式Go実装プロトコル</h2>
         <br/>
-        <a href="https://github.com/ethereum/go-ethereum" target="_blank" class="btn btn-success" style="margin: 4px;"><i class="fa fa-github" aria-hidden="true"></i> View on GitHub</a>
-        <a href="https://gitter.im/ethereum/go-ethereum" target="_blank" class="btn btn-success" style="margin: 4px;"><i class="fa fa-user-circle" aria-hidden="true"></i> Chat on Gitter</a>
+        <a href="https://github.com/japariyen/go-japariyen" target="_blank" class="btn btn-success" style="margin: 4px;"><i class="fa fa-github" aria-hidden="true"></i>GitHubで見れるよー</a>
+        <!--<a href="https://gitter.im/ethereum/go-ethereum" target="_blank" class="btn btn-success" style="margin: 4px;"><i class="fa fa-user-circle" aria-hidden="true"></i> Chat on Gitter</a>-->
       </div>
     </div>
 
@@ -63,9 +63,9 @@
     <div class="container marketing">
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">What is Ethereum?</h2>
-          <p class="lead">Ethereum is a  decentralized platform that runs smart contracts, applications that run exactly as programmed without possibility of downtime, censorship, fraud or third party interference.</p>
-          <p class="lead">See <a href="https://ethereum.org" target="_blank">our website</a> or <a href="http://ethdocs.org/en/latest/introduction/what-is-ethereum.html" target="_blank">read the docs</a> for more infos!</p>
+          <h2 class="featurette-heading">じゃぱりえんって何なのー？</h2>
+          <p class="lead">じゃぱりえんは、Ethereumのフォークコインだよー</p>
+          <!--<p class="lead">See <a href="https://ethereum.org" target="_blank">our website</a> or <a href="http://ethdocs.org/en/latest/introduction/what-is-ethereum.html" target="_blank">read the docs</a> for more infos!</p>-->
         </div>
         <div class="col-md-5 hide-on-small-screen">
           <img class="featurette-image center-block" src="./static/images/ethereum.png" height="300px">
@@ -74,9 +74,9 @@
       <hr/>
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">What is Go Ethereum?</h2>
-          <p class="lead">Go Ethereum is one of the three original implementations (along with C++ and Python) of the Ethereum protocol. It is written in Go, fully open source and licensed under the GNU LGPL v3.</p>
-          <p class="lead">See <a href="https://github.com/ethereum/go-ethereum" target="_blank">our repository</a> and <a href="./downloads">downloads section</a> for the code!</p>
+          <h2 class="featurette-heading">Go Japariyen って何?</h2>
+          <p class="lead">Go Japariyenは、Goで書かれてるよー。完全にオープンソースで、GNU LGPL v3のライセンスに則っているよー</p>
+          <p class="lead">See <a href="https://github.com/japariyen/go-japariyen" target="_blank">わたしたちのリポジトリだよー</a></p>
         </div>
         <div class="col-md-5 col-md-pull-7 hide-on-small-screen">
           <img class="featurette-image center-block" src="./static/images/mascot.png" height="300px">
@@ -85,14 +85,16 @@
       <hr/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">How can I use it?</h2>
-          <p class="lead">Go Ethereum is available either as a standalone client called Geth that you can install on pretty much any operating system, or as a library that you can embed in your Go, Android or iOS projects.</p>
-          <p class="lead">See our <a href="./install">installation guide</a> or our <a href="https://github.com/ethereum/go-ethereum/wiki" target="_blank">wiki pages</a> for details!</p>
+          <h2 class="featurette-heading">どーやって使うのー？</h2>
+          <p class="lead">Goじゃぱりえんは、Gethって呼ばれるスタンドアロンクライアントとして使用できるよー。
+            これは、ほとんどすべてのオペレーティングシステムにインストールできるらしいよ。
+            それから、Go、Android、またはiOSプロジェクトに組み込むことができるライブラリとして利用できるよー。</p>
+          <p class="lead">私たちの<a href="./install">いんすとーるガイド</a>を見るか、<a href="https://github.com/japariyen/go-japariyen/wiki" target="_blank">wikiを見てねー</a>詳しくはここだよー</p>
         </div>
       </div>
       <hr/>
       <footer>
-        <p>&copy; 2013-2016. The go-ethereum Authors.</p>
+        <p>&copy; 2017. japariyenを作ったフレンズ</p>
       </footer>
     </div>
   </body>
