--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="install/">Install</a></li>
-            <li><a href="downloads/">Downloads</a></li>
+            <li><a href="install/">いんすとーる</a></li>
+            <li><a href="downloads/">だうんろーど</a></li>
             <!--<li><a href="/guide/">Guide</a></li>-->
           </ul>
         </div>
@@ -48,7 +48,7 @@
 
     <div class="jumbotron">
       <div class="container mascot">
-        <h1>Go Japariyen</h1>
+        <img src="./static/images/topimg.png"/>
         <h2>じゃぱりえん公式Go実装プロトコル</h2>
         <br/>
         <a href="https://github.com/japariyen/go-japariyen" target="_blank" class="btn btn-success" style="margin: 4px;"><i class="fa fa-github" aria-hidden="true"></i>GitHubで見れるよー</a>
