--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="install/">いんすとーる</a></li>
-            <li><a href="downloads/">だうんろーど</a></li>
+            <!--<li><a href="install/">いんすとーる</a></li>
+            <li><a href="downloads/">だうんろーど</a></li>-->
             <!--<li><a href="/guide/">Guide</a></li>-->
           </ul>
         </div>
