--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container marketing">
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">じゃぱりえんって何なのー？</h2>
+          <h2 class="featurette-heading"><img src="./static/images/what.png"></h2>
           <p class="lead">じゃぱりえんは、Ethereumのフォークコインだよー</p>
           <!--<p class="lead">See <a href="https://ethereum.org" target="_blank">our website</a> or <a href="http://ethdocs.org/en/latest/introduction/what-is-ethereum.html" target="_blank">read the docs</a> for more infos!</p>-->
         </div>
@@ -74,7 +74,7 @@
       <hr/>
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Go Japariyen って何?</h2>
+          <h2 class="featurette-heading"><img src="./static/images/what_go_japari.png"></h2>
           <p class="lead">Go Japariyenは、Goで書かれてるよー。完全にオープンソースで、GNU LGPL v3のライセンスに則っているよー</p>
           <p class="lead">See <a href="https://github.com/japariyen/go-japariyen" target="_blank">わたしたちのリポジトリだよー</a></p>
         </div>
@@ -85,7 +85,7 @@
       <hr/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">どーやって使うのー？</h2>
+          <h2 class="featurette-heading"><img src="./static/images/how_to_use.png"></h2>
           <p class="lead">Goじゃぱりえんは、Gethって呼ばれるスタンドアロンクライアントとして使用できるよー。
             これは、ほとんどすべてのオペレーティングシステムにインストールできるらしいよ。
             それから、Go、Android、またはiOSプロジェクトに組み込むことができるライブラリとして利用できるよー。</p>
