--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <!--<p class="lead">See <a href="https://ethereum.org" target="_blank">our website</a> or <a href="http://ethdocs.org/en/latest/introduction/what-is-ethereum.html" target="_blank">read the docs</a> for more infos!</p>-->
         </div>
         <div class="col-md-5 hide-on-small-screen">
-          <img class="featurette-image center-block" src="./static/images/ethereum.png" height="300px">
+          <img class="featurette-image center-block" src="./static/images/japariyen.png" height="300px">
         </div>
       </div>
       <hr/>
@@ -76,7 +76,7 @@
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading"><img src="./static/images/what_go_japari.png"></h2>
           <p class="lead">Go Japariyenは、Goで書かれてるよー。完全にオープンソースで、GNU LGPL v3のライセンスに則っているよー</p>
-          <p class="lead">See <a href="https://github.com/japariyen/go-japariyen" target="_blank">わたしたちのリポジトリだよー</a></p>
+          <p class="lead"><a href="https://github.com/japariyen/go-japariyen" target="_blank">わたしたちのリポジトリだよー</a></p>
         </div>
         <div class="col-md-5 col-md-pull-7 hide-on-small-screen">
           <img class="featurette-image center-block" src="./static/images/mascot.png" height="300px">
