--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
         <h2>じゃぱりえん公式Go実装プロトコル</h2>
         <br/>
         <a href="https://github.com/japariyen/go-japariyen" target="_blank" class="btn btn-success" style="margin: 4px;"><i class="fa fa-github" aria-hidden="true"></i>GitHubで見れるよー</a>
-        <!--<a href="https://gitter.im/ethereum/go-ethereum" target="_blank" class="btn btn-success" style="margin: 4px;"><i class="fa fa-user-circle" aria-hidden="true"></i> Chat on Gitter</a>-->
       </div>
     </div>
 
@@ -64,8 +63,22 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading"><img src="./static/images/what.png"></h2>
-          <p class="lead">じゃぱりえんは、Ethereumのフォークコインだよー</p>
-          <!--<p class="lead">See <a href="https://ethereum.org" target="_blank">our website</a> or <a href="http://ethdocs.org/en/latest/introduction/what-is-ethereum.html" target="_blank">read the docs</a> for more infos!</p>-->
+          <p class="lead">じゃぱりえんは、Ethereumのフォークコインだよー
+            <br/>暗号通貨初心者が遊ぶためのネタコインとして作ったよー
+          </p>
+          <p class="lead">
+            <br/>
+              <font color="blue">特徴だよー</font>
+                <br/>増減期があるよー
+                <br/>半減期が６回。増加期が2回あるよー。むーあ？知らないよー？
+          </p>
+          <p class="lead">
+            <br/>
+              <font color="red">注意事項</font>
+                <br/>ネタコインです！
+                <br/>変な期待をして参加したり絶対にしないでください。
+                <br/>慣わしらしいので、bitcoin.orgでの宣言はする予定です。
+          </p>
         </div>
         <div class="col-md-5 hide-on-small-screen">
           <img class="featurette-image center-block" src="./static/images/japariyen.png" height="300px">
@@ -74,27 +87,22 @@
       <hr/>
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading"><img src="./static/images/what_go_japari.png"></h2>
-          <p class="lead">Go Japariyenは、Goで書かれてるよー。完全にオープンソースで、GNU LGPL v3のライセンスに則っているよー</p>
+          <h2 class="featurette-heading"><img src="./static/images/how_to_use.png"></h2>
+          <p class="lead">Go Japariyenは、Goで書かれてるよー。
+            <br/>完全にオープンソースだよー</p>
           <p class="lead"><a href="https://github.com/japariyen/go-japariyen" target="_blank">わたしたちのリポジトリだよー</a></p>
+          <p class="lead">Goじゃぱりえんは、Gjpyって呼ばれるスタンドアロンクライアントとして使用できるよー。
+            <br/>（Gethのコピペ。イーサリアム が神でした。）</p>
+          <p class="lead"><a href="https://github.com/japariyen/go-japariyen/wiki" target="_blank">wiki</a>は工事中だよー</p>
         </div>
         <div class="col-md-5 col-md-pull-7 hide-on-small-screen">
-          <img class="featurette-image center-block" src="./static/images/mascot.png" height="300px">
+        <!--<img class="featurette-image center-block" src="./static/images/mascot.png" height="300px">-->
         </div>
       </div>
-      <hr/>
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading"><img src="./static/images/how_to_use.png"></h2>
-          <p class="lead">Goじゃぱりえんは、Gethって呼ばれるスタンドアロンクライアントとして使用できるよー。
-            これは、ほとんどすべてのオペレーティングシステムにインストールできるらしいよ。
-            それから、Go、Android、またはiOSプロジェクトに組み込むことができるライブラリとして利用できるよー。</p>
-          <p class="lead">私たちの<a href="./install">いんすとーるガイド</a>を見るか、<a href="https://github.com/japariyen/go-japariyen/wiki" target="_blank">wikiを見てねー</a>詳しくはここだよー</p>
-        </div>
-      </div>
+
       <hr/>
       <footer>
-        <p>&copy; 2017. japariyenを作ったフレンズ</p>
+        <p>&copy; 2017. japariyenを作ったふれんず</p>
       </footer>
     </div>
   </body>
