--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
               <font color="blue">特徴だよー</font>
                 <br/>増減期があるよー
                 <br/>半減期が６回。増加期が2回あるよー。むーあ？知らないよー？
+                <!--TODO:仕様
+                アルゴリズム：
+                ブロック間隔：
+                増減期：
+                -->
           </p>
           <p class="lead">
             <br/>
@@ -78,6 +83,7 @@
                 <br/>ネタコインです！
                 <br/>変な期待をして参加したり絶対にしないでください。
                 <br/>慣わしらしいので、bitcoin.orgでの宣言はする予定です。
+                <br/>ジャパリコイン(仮)様とは一切関係はありません。
           </p>
         </div>
         <div class="col-md-5 hide-on-small-screen">
@@ -94,6 +100,9 @@
           <p class="lead">Goじゃぱりえんは、Gjpyって呼ばれるスタンドアロンクライアントとして使用できるよー。
             <br/>（Gethのコピペ。イーサリアム が神でした。）</p>
           <p class="lead"><a href="https://github.com/japariyen/go-japariyen/wiki" target="_blank">wiki</a>は工事中だよー</p>
+          <p class="lead"><a href="https://github.com/japariyen/japari-mist/releases" target="_blank">wallet</a>だよー</p>
+          <!--TODO:お問い合わせ--->
+
         </div>
         <div class="col-md-5 col-md-pull-7 hide-on-small-screen">
         <!--<img class="featurette-image center-block" src="./static/images/mascot.png" height="300px">-->
